# visible-layers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: application.md  human-in-the-loop-workflow.md  initial-issues.md  layer-taxonomy.md  manifesto.md  occlusion-problem.md  prior-art.md  roadmap.md
examples/simple/: README.md
tests/: helpers.py  test_cli.py  test_demo.py  test_gaps.py  test_layers.py  test_metadata.py  test_preview.py  test_reports.py
visible_layers/: __init__.py  cli.py  demo.py  gaps.py  layers.py  metadata.py  preview.py  reports.py
