[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visible-layers"
version = "0.1.0"
description = "An open-source pipeline for turning flat character illustrations into riggable layered assets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Visible Layers contributors" }
]
keywords = [
  "live2d",
  "vtuber",
  "image-segmentation",
  "layered-assets",
  "inpainting",
  "rigging"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics"
]
dependencies = [
  "Pillow>=10.0.0"
]

[project.urls]
Homepage = "https://github.com/your-name/visible-layers"
Issues = "https://github.com/your-name/visible-layers/issues"

[project.scripts]
visible-layers = "visible_layers.cli:main"

[tool.setuptools.packages.find]
include = ["visible_layers*"]
